--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,14 +12,18 @@
     "mapbox-gl": "^2.5.1",
     "next": "12.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "serverless-next.js": "^1.15.0-alpha.2",
+    "tailwind-styled-components": "^2.2.0",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.2",
     "postcss": "^8.3.11",
-    "tailwind-styled-components": "^2.0.3",
+    "serverless-python-requirements": "^6.1.1",
     "tailwindcss": "^2.2.19"
   }
 }
