--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.2",
+    "@react-google-maps/api": "^2.19.3",
     "firebase": "^9.3.0",
-    "mapbox-gl": "^2.5.1",
+    "mapbox-gl": "^2.15.0",
     "next": "12.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
