--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "scripts": {
     "dev": "NODE_OPTIONS=--openssl-legacy-provider next dev",
     "build": "NODE_OPTIONS=--openssl-legacy-provider next build",
-    "start": "NODE_OPTIONS=--openssl-legacy-provider next start",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider nodemon server.js",
     "lint": "NODE_OPTIONS=--openssl-legacy-provider next lint",
     "deploy": "NODE_OPTIONS=--openssl-legacy-provider serverless deploy"
-
-    
   },
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
     "@react-google-maps/api": "^2.19.3",
+    "axios": "^1.7.7",
     "firebase": "^9.3.0",
     "mapbox-gl": "^2.15.0",
     "next": "12.0.2",
@@ -21,7 +20,8 @@
     "serverless-next.js": "^1.15.0-alpha.2",
     "tailwind-styled-components": "^2.2.0",
     "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
