--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "serverless-next.js": "^1.15.0-alpha.2",
     "tailwind-styled-components": "^2.2.0",
     "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4",
-    "winston": "^3.14.2"
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
