--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,21 @@
-venv*
-.re*
-.server*
-
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules*
-/frontend/node_modules*
-/frontend/node_modules/*
-
+/node_modules
 /.pnp
 .pnp.js
 .*
+
+*venv*
 
 # testing
 /coverage
 
 # next.js
-/.next/*
-.next*
+/.next/
 /out/
+
+
 
 # production
 /build
@@ -42,6 +38,24 @@ yarn-error.log*
 # vercel
 .vercel
 
+#amplify-do-not-edit-begin
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/logs
+amplify/mock-data
+amplify/mock-api-resources
+amplify/backend/amplify-meta.json
+amplify/backend/.temp
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
+amplifyconfiguration.json
+amplifyconfiguration.dart
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
 .secret-*
 **.sample
 #amplify-do-not-edit-end
