--- a/lambdas/serverless.yml
+++ b/lambdas/serverless.yml
@@ -197,7 +197,7 @@ resources:
         ApiId: !Ref WebSocketApi
         RouteKey: '$connect'
         AuthorizationType: NONE
-        Target: !Sub 'arn:aws:apigateway:${self:provider.region}:lambda:path/2015-03-31/functions/${self:functions.connect.arn}/invocations'
+        Target: !Sub 'arn:aws:apigateway:${self:provider.region}:lambda:path/2015-03-31/functions/${self:resources.Resources.WebSocketApiIntegrationConnect.Properties.IntegrationUri}/invocations'
 
     WebSocketApiRouteDisconnect:
       Type: 'AWS::ApiGatewayV2::Route'
@@ -205,7 +205,7 @@ resources:
         ApiId: !Ref WebSocketApi
         RouteKey: '$disconnect'
         AuthorizationType: NONE
-        Target: !Sub 'arn:aws:apigateway:${self:provider.region}:lambda:path/2015-03-31/functions/${self:functions.disconnect.arn}/invocations'
+        Target: !Sub 'arn:aws:apigateway:${self:provider.region}:lambda:path/2015-03-31/functions/${self:resources.Resources.WebSocketApiIntegrationDisconnect.Properties.IntegrationUri}/invocations'
 
     WebSocketApiRouteMessage:
       Type: 'AWS::ApiGatewayV2::Route'
@@ -213,7 +213,7 @@ resources:
         ApiId: !Ref WebSocketApi
         RouteKey: '$default'
         AuthorizationType: NONE
-        Target: !Sub 'arn:aws:apigateway:${self:provider.region}:lambda:path/2015-03-31/functions/${self:functions.message.arn}/invocations'
+        Target: !Sub 'arn:aws:apigateway:${self:provider.region}:lambda:path/2015-03-31/functions/${self:resources.Resources.WebSocketApiIntegrationMessage.Properties.IntegrationUri}/invocations'
 
     WebSocketApiIntegrationConnect:
       Type: 'AWS::ApiGatewayV2::Integration'
